K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: godaampe.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /user-api
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 5000
      - path: /store-api
        pathType: Prefix
        backend:
          service:
            name: store-service
            port:
              number: 5000
      - path: /product-api
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 5000
      - path: /config-api
        pathType: Prefix
        backend:
          service:
            name: config-service
            port:
              number: 5000
      - path: /company-api
        pathType: Prefix
        backend:
          service:
            name: company-service
            port:
              number: 5000
      - path: /customer-api
        pathType: Prefix
        backend:
          service:
            name: customer-service
            port:
              number: 5000
      - path: /order-api
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 5000
